<resources>
    <string name="app_name">Gasolinerias</string>
    <string name="placa">Placa</string>
    <string name="modelo">Modelo</string>
    <string name="direccion_infraccion">Direccion de la infraccion</string>
    <string name="tipo_comparendo">Tipo</string>
    <string name="cedula_infractor">Cedula</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="err_campo_invalido">Se han ingreado campos vacios o valores invalidos</string>
    <string name="se_ha_iniciado_sesion_como">Se ha iniciado sesion como</string>
    <string name="se_ha_cerrado_la_sesion">Se ha cerrado la sesion</string>
    <string name="lista_vacia">Lista vacia</string>

    
    <string name="nombre">Nombre</string>
    <string name="empresa">Empresa</string>
    <string name="departamento">Departamento</string>
    <string name="municipio">Municipio</string>
    <string name="ubicacion">Ubicacion</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="err_no_location_permissions">No se han otorgado los permisos para acceder a la ubicacion</string>
    <string name="msg_select_location">Seleccione la ubicacion</string>
    <string name="explorar_mapa">Explorar mapa</string>
    <string name="err_no_hay_gasolinerias_registradas">No hay gasolinerias registradas</string>

    <string name="tipo_comp_todos">Todos</string>
    <string name="tipo_comp_luz_roja">Luz roja</string>
    <string name="tipo_comp_mal_parqueo">Mal parqueo</string>
    <string name="tipo_comp_papeles_vencidos">Papeles vencidos</string>

    <string name="shared_pref_login" translatable="false">_shared_pref_login</string>
    <string name="pref_current_user" translatable="false">_pref_current_user</string>
    <string name="pref_current_password" translatable="false">_pref_current_password</string>

    <string name="glyph_save" translatable="false">&#xe161;</string>
    <string name="glyph_remove" translatable="false">&#xe872;</string>
    <string name="glyph_cancel" translatable="false">&#xe5cd;</string>
    <string name="glyph_log_out" transtatable="false">&#xe879;</string>

    <string name="api_key_maps">AIzaSyDSnAZ4zEYsC-Qr0UeJOUuQWdv3IlQrZxo</string>
</resources>